Add support for organizing items as well

--- a/src/main/res/values-en/strings.xml
+++ b/src/main/res/values-en/strings.xml
@@ -51,4 +51,5 @@
     <string name="note">Note</string>
     <string name="menu_edit">Edit</string>
     <string name="card_item_subtitle_format">%s (%s)</string>
+    <string name="organize_button_label">Organize</string>
 </resources>
