--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -143,5 +143,6 @@
 
     <string name="action_settings">Settings</string>
     <string name="card_item_subtitle_format">%s (%s)</string>
+    <string name="organize_button_label">Organize</string>
 
 </resources>
