--- a/src/main/res/values-en/strings.xml
+++ b/src/main/res/values-en/strings.xml
@@ -52,4 +52,5 @@
     <string name="menu_edit">Edit</string>
     <string name="card_item_subtitle_format">%s (%s)</string>
     <string name="organize_button_label">Organize</string>
+    <string name="no_items_to_show_try_syncing_or_create_some">No items to show. Try syncing, or create some.</string>
 </resources>
